# ESP32-modbus-reader

./: .gitignore  AGENTS.md  CMakeLists.txt  build-esp32c3.ps1  build-weact.ps1  build.bat  build.ps1  partitions.csv  sdkconfig.esp32c3.defaults  sdkconfig.weact_esp32.defaults
boards/: board.h  esp32c3_board.h  weact_esp32_board.h
docs/: BUILD_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md
docs/devices/: README.md  WeAct_CAN485DevBoardV1.md
main/: CMakeLists.txt  main.c  modbus_devices.c  modbus_devices.h  modbus_manager.c  modbus_manager.h  modbus_protocol.c  mqtt_client.c  mqtt_client.h  mqtt_gateway.c  mqtt_gateway.h  nvs_storage.c  nvs_storage.h  web_server.c
main/html/: dashboard.html  index.html  modbus.html  modbus.js  mqtt.html  script.js  style.css
